--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<script src ="JAVASCRIPT/js/main.js"></script>
+
 <body>
-aaaa
+Diretório arrumado
+
+<script src="js/main.js"></script>
 </body>
 </html>
