--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
-Diretório arrumado
-
-<script src="js/main.js"></script>
-</body>
+  <body>
+    <h1>Lista de Compras</h1>
+    <input type="text">
+    <button onclick="inserirNaLista()">Inserir</button>
+    <ul></ul>
+    <!-- <script src="js/main.js"></script> -->
+    <script src="js/exemplosDom.js"></script>
+  </body>
 </html>
